<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="61dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="61dp">

        <TextView
            android:id="@+id/tv_nama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/nama"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_alas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="192dp"
            android:text="@string/harga"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.101"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etHarga"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="224dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/etNama"
            app:layout_constraintStart_toStartOf="@+id/etNama"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_tinggi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="88dp"
            android:text="@string/jumlah"
            app:layout_constraintEnd_toEndOf="@+id/tv_alas"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_alas"
            app:layout_constraintTop_toBottomOf="@+id/tv_alas" />

        <EditText
            android:id="@+id/etJumlah"
            android:layout_width="350dp"
            android:layout_height="45dp"
            android:layout_marginTop="60dp"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/etHarga"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/etHarga"
            app:layout_constraintTop_toBottomOf="@+id/etHarga" />

        <Button
            android:id="@+id/btnHitung"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/hitung"
            app:layout_constraintEnd_toEndOf="@+id/etJumlah"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="@+id/etJumlah"
            app:layout_constraintTop_toBottomOf="@+id/etJumlah" />

        <TextView
            android:id="@+id/tvHasil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="0"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/btnHitung"
            app:layout_constraintHorizontal_bias="0.474"
            app:layout_constraintStart_toStartOf="@+id/btnHitung"
            app:layout_constraintTop_toBottomOf="@+id/btnHitung" />

        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="0"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/tvHasil"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tvHasil"
            app:layout_constraintTop_toBottomOf="@+id/tvHasil" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/intro"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/etNama"
            android:layout_width="349dp"
            android:layout_height="44dp"
            android:layout_marginTop="44dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:text=""
            app:layout_constraintEnd_toEndOf="@+id/textView"
            app:layout_constraintHorizontal_bias="0.416"
            app:layout_constraintStart_toStartOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="132dp"
            android:text="@string/ppn"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/tv_tinggi"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/tv_tinggi"
            app:layout_constraintTop_toBottomOf="@+id/tv_tinggi" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/total_bayar"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="@+id/textView2"
            app:layout_constraintHorizontal_bias="0.395"
            app:layout_constraintStart_toStartOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>